2000-04-03  Roland McGrath  <roland@baalperazim.frob.com>

	* panic.c: Include <stdarg.h> instead of <varargs.h>.
	(panic): Use stdarg style.

2000-01-03  Roland McGrath  <roland@baalperazim.frob.com>

	* file_io.h: Include "../ext2fs/ext2_fs.h" instead of "ext2_fs.h".
	* ext2_file_io.c (search_directory): Use `struct ext2_dir_entry_2' in
	place of `struct ext2_dir_entry', so as to grok newer dir formats.
	* ext2_fs.h: File removed.
	* Makefile (LCLHDRS): Remove it from the list.
	* ffs_compat.c (EXT2_INODES_PER_BLOCK): New macro, no longer in
	ext2_fs.h.

1999-11-18  Roland McGrath  <roland@baalperazim.frob.com>

	* default_pager.c (default_pager): Instead of suspending this thread,
	just become the default_pager_default_thread thread ourselves.

	* wiring.c (wire_all_memory): Touch pages before wiring.

1999-11-16  Roland McGrath  <roland@baalperazim.frob.com>

	* default_pager.c (default_pager_initialize): Use MACH_PORT_VALID to
	check old DMM port, rather than just checking for MACH_PORT_NULL.

	* strfcns.c (index): Function removed.

	* ffs_file_io.c (ffs_open_file): Use memmove instead of ovbcopy.
	* ext2_file_io.c (ext2_open_file): Likewise.
	* strfcns.c (ovbcopy): Function removed.

1999-11-08  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (main): Further spruce up prompting and error reporting
	for root device and boot script.

1999-10-28  Roland McGrath  <roland@baalperazim.frob.com>

	* load.c, bootstrap.c: Back out some debugging printfs accidentally
	included in the last commit.
	* bootstrap.c (main): Increase size of NEW_ROOT buffer.
	This change was included in the last commit, but not logged then.

	* file_io.h: Include <errno.h>.
	(FS_* macros): Define these to equivalent errno codes.
	* def_pager_setup.c (add_paging_file): Put strerror of result code in
	error messages.
	* bootstrap.c (parse_script): Likewise.
	* load.c (boot_script_exec_cmd): Include NAMEBUF in error messages,
	and use strerror to format result code.